--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -14,9 +14,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	/*"launch_path": "pages/transaction/transaction2.html",*//*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
-	"launch_path":"pages/main/main.html",
-	/*"launch_path":"pages/login/reg.html",*/
+	"launch_path": "pages/main/main.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -175,7 +173,7 @@
 					"xhdpi": "", /*720P高分屏启动图片，分辨率：720x1242*/
 					"xxhdpi": ""
 				}
-			},"debug":true
+			}
 		}
 	},
 	"dependencies": {
@@ -294,12 +292,10 @@
 					"js/language.js",
 					"images/weixin.png",
 					"js/language/locale_zh_CN.js",
-					"js/language/locale_ja_JP.js",
-					"js/sha1.js"
+					"js/language/locale_ja_JP.js"
 				],
 				"refer": [
-					"pages/main/main.html",
-					"pages/login/forget_password.html"
+					"pages/main/main.html"
 				],
 				"priority": 0
 			},
@@ -328,8 +324,7 @@
 					"images/Good.PNG",
 					"images/userPhoto.png",
 					"js/language/locale_ja_JP.js",
-					"js/md5.js",
-					"js/sha1.js"
+					"js/md5.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -364,9 +359,7 @@
 				],
 				"refer": [
 					"pages/main/products/pro_commentslist.html",
-					"pages/main/products/productslist.html",
-					"pages/transaction/transaction2.html",
-					"pages/transaction/transaction.html"
+					"pages/main/products/productslist.html"
 				],
 				"priority": 0
 			},
@@ -411,9 +404,7 @@
 				],
 				"refer": [
 					"pages/login/login.html",
-					"pages/login/reg.html",
-					"pages/main/search.html",
-					"pages/main/user/user.html"
+					"pages/login/reg.html"
 				],
 				"priority": 0
 			},
@@ -466,13 +457,9 @@
 					"js/mui.min.js",
 					"css/mui.min.css",
 					"css/kankan_home.css",
-					"images/cbd.jpg",
-					"images/morebut.png"
+					"images/cbd.jpg"
 				],
-				"refer": [
-					"pages/main/products/requestlist.html",
-					"pages/main/products/translatelist.html"
-				],
+				"refer": [],
 				"priority": 0
 			},
 			"pages/main/pullrefresh_with_tab.html": {
@@ -489,8 +476,7 @@
 					"css/home.css",
 					"css/icons-extra.css",
 					"fonts/mui-icons-extra.ttf",
-					"js/language.js",
-					"js/language/locale_zh_CN.js"
+					"js/language.js"
 				],
 				"refer": [
 					"pages/main/products/detail.html",
@@ -505,33 +491,7 @@
 					"images/Bad.PNG",
 					"images/Normal.PNG",
 					"images/Good.PNG",
-					"images/shuijiao.jpg",
-					"js/common.js",
-					"js/mui.min.js",
-					"js/sha256.js",
-					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"css/mui.min.css",
-					"js/language/locale_zh_CN.js",
-					"fonts/mui.ttf",
-					"css/kankan_home.css"
-				],
-				"refer": [
-					"pages/main/products/commentlist.html"
-				],
-				"priority": 0
-			},
-			"pages/transaction/transaction.html": {
-				"resources": [
-					"images/cbd.jpg",
-					"images/Bad.PNG",
-					"images/Normal.PNG",
-					"images/Good.PNG",
-					"images/shuijiao.jpg",
-					"css/wu.css",
-					"css/feedback.css",
-					"images/sinaweibo.png",
-					"images/xinhuan.png"
+					"images/shuijiao.jpg"
 				],
 				"refer": [],
 				"priority": 0
@@ -543,172 +503,11 @@
 					"js/mui.min.js",
 					"js/sha256.js",
 					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/kankan_home.css",
-					"css/icons-extra.css",
-					"fonts/mui-icons-extra.ttf"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/transaction/point_to_ticket.html": {
-				"resources": [
-					"css/wu.css",
-					"css/feedback.css",
-					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"js/language.js",
 					"css/mui.min.css",
 					"css/kankan_home.css",
-					"js/feedback.js",
-					"css/icons-extra.css",
-					"js/mui.view.js",
-					"js/language/locale_zh_CN.js",
-					"js/app.js",
-					"js/jquery-3.2.0.min.js",
-					"js/mui.enterfocus.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/products/requestlist.html": {
-				"resources": [
-					"images/cbd.jpg",
-					"css/mui.min.css",
-					"css/kankan_home.css"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/products/translatelist.html": {
-				"resources": [
-					"images/15724-200.png",
-					"images/cbd.jpg",
-					"images/MacPro.jpg",
-					"images/muwu.jpg",
-					"images/jiantou.png",
-					"js/mui.min.js",
-					"js/jquery-3.2.0.min.js",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"css/kankan_home.css"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/products/product_want_to_buy.html": {
-				"resources": [
-					"images/iconfont-tianjia.png",
-					"js/common.js",
-					"js/mui.min.js",
-					"js/sha256.js",
-					"js/jquery-3.2.0.min.js",
-					"fonts/mui.ttf",
-					"js/language.js",
-					"css/mui.min.css",
-					"css/kankan_home.css",
-					"js/language/locale_zh_CN.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/search.html": {
-				"resources": [
-					"fonts/mui.ttf",
-					"css/icons-extra.css",
-					"js/common.js",
-					"js/mui.min.js",
-					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"css/mui.min.css",
-					"js/language/locale_zh_CN.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/transaction/point_to_ticket2.html": {
-				"resources": [
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"css/style.css",
-					"js/mui.min.js",
-					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"js/language/locale_zh_CN.js",
-					"js/mui.view.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/transaction/point_buy.html": {
-				"resources": [
-					"js/mui.min.js",
-					"js/jquery-3.2.0.min.js",
-					"fonts/mui.ttf",
-					"js/language.js",
-					"css/mui.min.css",
-					"js/language/locale_zh_CN.js",
-					"css/style.css",
-					"js/mui.view.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/transaction/transaction2.html": {
-				"resources": [
-					"images/cbd.jpg",
-					"css/wu.css",
-					"css/feedback.css",
-					"images/muwu.jpg",
-					"js/mui.min.js",
-					"fonts/mui.ttf",
-					"images/sinaweibo.png",
-					"css/mui.min.css",
-					"images/xinhuan.png",
-					"images/weixin.png",
-					"css/kankan_home.css",
-					"css/icons-extra.css",
-					"pages/main/logisticslist.html",
-					"js/jquery-3.2.0.min.js",
-					"js/common.js",
-					"js/sha256.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/logisticslist.html": {
-				"resources": [
-					"js/common.js",
-					"js/jquery-3.2.0.min.js",
-					"js/sha256.js",
-					"js/language.js",
-					"js/language/locale_zh_CN.js",
-					"js/feedback.js",
-					"js/knockout-3.4.2.js",
-					"js/mui.view.js",
-					"pages/transaction/transaction2.html",
-					"images/car.png"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"pages/main/products/commentlist.html": {
-				"resources": [
-					"js/common.js",
-					"js/mui.min.js",
-					"js/sha256.js",
-					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"css/mui.min.css",
-					"images/Bad.PNG",
-					"images/Normal.PNG",
-					"images/Good.PNG",
-					"css/icons-extra.css",
-					"js/language/locale_zh_CN.js",
-					"css/kankan_home.css",
-					"fonts/mui.ttf"
+					"css/icons-extra.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -717,51 +516,27 @@
 				"resources": [
 					"js/picker/mui.poppicker.js",
 					"images/cbd.jpg",
-					"css/feedback.css",
-					"css/wu.css",
 					"js/picker/mui.picker.js",
+					"css/wu.css",
+					"css/feedback.css",
 					"images/muwu.jpg",
-					"images/Bad.PNG",
-					"images/Normal.PNG",
-					"images/Good.PNG",
 					"images/userPhoto.png",
-					"js/language/locale_zh_CN.js",
-					"css/kankan_home.css",
-					"css/mui.picker.css",
-					"css/icons-extra.css",
-					"js/common.js",
-					"js/mui.min.js",
-					"js/sha256.js",
-					"js/jquery-3.2.0.min.js",
-					"js/language.js",
-					"css/mui.min.css",
-					"css/mui.poppicker.css",
-					"js/picker/city.data.js",
 					"js/feedback.js",
-					"js/mui.view.js",
-					"fonts/mui-icons-extra.ttf",
+					"js/picker/city.data.js",
+					"images/Normal.PNG",
+					"images/Bad.PNG",
+					"images/Good.PNG",
 					"fonts/mui.ttf",
-					"pages/setting/setting.html"
+					"js/language/locale_zh_CN.js"
 				],
-				"refer": [
-					"pages/main/products/product_login.html",
-					"pages/main/products/commentlist.html",
-					"pages/main/products/detail.html"
-				],
+				"refer": [],
 				"priority": 0
 			},
-			"pages/setting/setting.html": {
+			"pages/main/products/commentlist.html": {
 				"resources": [
-					"pages/main/user/user.html",
-					"css/wu.css",
-					"css/feedback.css",
-					"js/mui.min.js",
-					"js/jquery-3.2.0.min.js",
-					"css/mui.min.css",
-					"css/kankan_home.css",
-					"js/feedback.js",
-					"css/icons-extra.css",
-					"js/mui.view.js"
+					"images/Bad.PNG",
+					"images/Normal.PNG",
+					"images/Good.PNG"
 				],
 				"refer": [],
 				"priority": 0
