--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -292,7 +292,8 @@
 					"js/language.js",
 					"images/weixin.png",
 					"js/language/locale_zh_CN.js",
-					"js/language/locale_ja_JP.js"
+					"js/language/locale_ja_JP.js",
+					"js/sha1.js"
 				],
 				"refer": [
 					"pages/main/main.html"
@@ -324,7 +325,8 @@
 					"images/Good.PNG",
 					"images/userPhoto.png",
 					"js/language/locale_ja_JP.js",
-					"js/md5.js"
+					"js/md5.js",
+					"js/sha1.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -404,7 +406,9 @@
 				],
 				"refer": [
 					"pages/login/login.html",
-					"pages/login/reg.html"
+					"pages/login/reg.html",
+					"pages/main/search.html",
+					"pages/main/user/user.html"
 				],
 				"priority": 0
 			},
@@ -459,7 +463,10 @@
 					"css/kankan_home.css",
 					"images/cbd.jpg"
 				],
-				"refer": [],
+				"refer": [
+					"pages/main/products/requestlist.html",
+					"pages/main/products/translatelist.html"
+				],
 				"priority": 0
 			},
 			"pages/main/pullrefresh_with_tab.html": {
@@ -476,7 +483,12 @@
 					"css/home.css",
 					"css/icons-extra.css",
 					"fonts/mui-icons-extra.ttf",
-					"js/language.js"
+					"js/language.js",
+					"fonts/mui.ttf",
+					"css/listitem.css",
+					"images/nopic.jpg",
+					"images/muwu.jpg",
+					"images/MacPro.jpg"
 				],
 				"refer": [
 					"pages/main/products/detail.html",
@@ -498,16 +510,29 @@
 			},
 			"pages/main/products/pro_commentslist.html": {
 				"resources": [
-					"js/language/locale_zh_CN.js",
-					"js/common.js",
-					"js/mui.min.js",
-					"js/sha256.js",
-					"js/jquery-3.2.0.min.js",
-					"fonts/mui.ttf",
-					"js/language.js",
-					"css/mui.min.css",
-					"css/kankan_home.css",
-					"css/icons-extra.css"
+					"js/language/locale_zh_CN.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/products/requestlist.html": {
+				"resources": [
+					"images/cbd.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/products/translatelist.html": {
+				"resources": [
+					"images/15724-200.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/products/product_want_to_buy.html": {
+				"resources": [
+					"images/iconfont-tianjia.png",
+					"css/kankan_home.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -515,28 +540,49 @@
 			"pages/main/user/user.html": {
 				"resources": [
 					"js/picker/mui.poppicker.js",
-					"images/cbd.jpg",
 					"js/picker/mui.picker.js",
 					"css/wu.css",
 					"css/feedback.css",
-					"images/muwu.jpg",
-					"images/userPhoto.png",
 					"js/feedback.js",
 					"js/picker/city.data.js",
-					"images/Normal.PNG",
+					"fonts/mui-icons-extra.ttf",
 					"images/Bad.PNG",
+					"images/Normal.PNG",
 					"images/Good.PNG",
-					"fonts/mui.ttf",
-					"js/language/locale_zh_CN.js"
+					"fonts/mui.ttf"
+				],
+				"refer": [
+					"pages/main/products/product_login.html",
+					"pages/main/products/commentlist.html",
+					"pages/main/products/detail.html"
+				],
+				"priority": 0
+			},
+			"pages/main/pullrefresh_with_tab_lixin.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"css/mui.min.css",
+					"js/knockout.min.js",
+					"css/home.css",
+					"css/icons-extra.css"
 				],
 				"refer": [],
 				"priority": 0
 			},
-			"pages/main/products/commentlist.html": {
+			"pages/main/search.html": {
 				"resources": [
-					"images/Bad.PNG",
-					"images/Normal.PNG",
-					"images/Good.PNG"
+					"js/common.js",
+					"js/mui.min.js",
+					"js/jquery-3.2.0.min.js",
+					"fonts/mui.ttf",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/icons-extra.css"
 				],
 				"refer": [],
 				"priority": 0
