--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -102,20 +102,20 @@
 				"payment": {
 					"weixin": {
 						"description": "微信支付",
-						"appid": "wx321b171a15b31c63"
+						"appid": "wxa305a32371b65619"
 					}
 				},
 				"share": {
 					"weixin": {
-						"appid": "wx321b171a15b31c63",
-						"appsecret": "b136008481192a032c36f5bfc91ebc39",
+						"appid": "wxa305a32371b65619",
+						"appsecret": "0010a787ec3751c355681d1b9aaede73",
 						"description": "可选，微信分享"
 					}
 				},
 				"oauth": {
 					"weixin": {
-						"appid": "wx321b171a15b31c63",
-						"appsecret": "b136008481192a032c36f5bfc91ebc39"
+						"appid": "wxa305a32371b65619",
+						"appsecret": "0010a787ec3751c355681d1b9aaede73"
 					}
 				}
 			},
@@ -471,7 +471,8 @@
 				"refer": [
 					"pages/main/products/product_login.html",
 					"pages/main/products/request.html",
-					"pages/main/products/product_want_to_buy.html"
+					"pages/main/products/product_want_to_buy.html",
+					"pages/main/logisticslist.html"
 				],
 				"priority": 0
 			},
@@ -507,7 +508,10 @@
 					"images/cbd.jpg",
 					"js/sha256.js",
 					"images/morebut.png",
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"fonts/mui.ttf",
+					"js/common.js",
+					"js/jquery-3.2.0.min.js"
 				],
 				"refer": [
 					"pages/login/login.html",
@@ -536,7 +540,8 @@
 					"js/lazy-load-img.min.js",
 					"images/nopic.jpg",
 					"js/language/locale_zh_CN.js",
-					"images/request.png"
+					"images/request.png",
+					"js/jquery.lazyload.min.js"
 				],
 				"refer": [
 					"pages/main/products/detail.html",
@@ -568,7 +573,8 @@
 			"pages/main/products/product_want_to_buy.html": {
 				"resources": [
 					"images/iconfont-tianjia.png",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/sha256.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -586,7 +592,8 @@
 					"images/Good.PNG",
 					"images/userPhoto.png",
 					"js/feedback.js",
-					"js/picker/city.data.js"
+					"js/picker/city.data.js",
+					"fonts/mui.ttf"
 				],
 				"refer": [
 					"pages/main/products/product_login.html",
@@ -603,7 +610,16 @@
 					"images/car.png",
 					"js/language/locale_zh_CN.js",
 					"fonts/mui.ttf",
-					"pages/transaction/transaction2.html"
+					"pages/transaction/transaction2.html",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"js/mui.view.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -626,7 +642,15 @@
 			},
 			"pages/main/search.html": {
 				"resources": [
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/jquery-3.2.0.min.js",
+					"fonts/mui.ttf",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/icons-extra.css",
+					"js/language/locale_ja_JP.js"
 				],
 				"refer": [],
 				"priority": 0
