--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -399,11 +399,15 @@
 					"js/sha256.js",
 					"js/language/locale_ja_JP.js",
 					"js/language/locale_zh_CN.js",
-					"images/nopic.jpg"
+					"images/nopic.jpg",
+					"images/weixin2.png"
 				],
 				"refer": [
 					"pages/main/products/pro_commentslist.html",
-					"pages/main/products/productslist.html"
+					"pages/main/products/productslist.html",
+					"pages/transaction/select_item.html",
+					"pages/transaction/transaction2.html",
+					"pages/login/login.html"
 				],
 				"priority": 0
 			},
@@ -425,7 +429,8 @@
 					"js/sha256.js",
 					"js/common.js",
 					"js/language.js",
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"js/pro_uploadimg.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -451,7 +456,8 @@
 					"pages/login/login.html",
 					"pages/login/reg.html",
 					"pages/main/search.html",
-					"pages/main/user/user.html"
+					"pages/main/user/user.html",
+					"pages/main/news.html"
 				],
 				"priority": 0
 			},
@@ -466,13 +472,15 @@
 					"js/jquery-3.2.0.min.js",
 					"js/language/locale_ja_JP.js",
 					"js/common.js",
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"fonts/mui-icons-extra.ttf"
 				],
 				"refer": [
 					"pages/main/products/product_login.html",
 					"pages/main/products/request.html",
 					"pages/main/products/product_want_to_buy.html",
-					"pages/main/logisticslist.html"
+					"pages/main/logisticslist.html",
+					"pages/login/login.html"
 				],
 				"priority": 0
 			},
@@ -511,7 +519,10 @@
 					"js/language/locale_zh_CN.js",
 					"fonts/mui.ttf",
 					"js/common.js",
-					"js/jquery-3.2.0.min.js"
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"images/nopic.jpg",
+					"js/language/locale_ja_JP.js"
 				],
 				"refer": [
 					"pages/login/login.html",
@@ -558,14 +569,32 @@
 					"images/Bad.PNG",
 					"images/Normal.PNG",
 					"images/Good.PNG",
-					"images/shuijiao.jpg"
+					"images/shuijiao.jpg",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"fonts/mui.ttf",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/kankan_home.css",
+					"js/language/locale_zh_CN.js"
 				],
 				"refer": [],
 				"priority": 0
 			},
 			"pages/main/products/pro_commentslist.html": {
 				"resources": [
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -574,7 +603,14 @@
 				"resources": [
 					"images/iconfont-tianjia.png",
 					"fonts/mui.ttf",
-					"js/sha256.js"
+					"js/sha256.js",
+					"js/pro_uploadimg.js",
+					"css/kankan_home.css",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -593,12 +629,27 @@
 					"images/userPhoto.png",
 					"js/feedback.js",
 					"js/picker/city.data.js",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/language/locale_zh_CN.js",
+					"css/mui.picker.css",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/mui.poppicker.css",
+					"js/mui.view.js",
+					"images/nopic.jpg",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"pages/setting/setting.html"
 				],
 				"refer": [
 					"pages/main/products/product_login.html",
 					"pages/main/products/detail.html",
-					"pages/main/products/commentlist.html"
+					"pages/main/products/commentlist.html",
+					"pages/login/login.html"
 				],
 				"priority": 0
 			},
@@ -657,10 +708,19 @@
 			},
 			"pages/main/products/requestlist.html": {
 				"resources": [
-					"js/language/locale_zh_CN.js"
+					"js/language/locale_zh_CN.js",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/kankan_home.css"
 				],
 				"refer": [
-					"pages/main/products/translatelist.html"
+					"pages/main/products/translatelist.html",
+					"pages/transaction/transaction2.html"
 				],
 				"priority": 0
 			},
@@ -682,7 +742,123 @@
 					"images/muwu.jpg",
 					"images/sinaweibo.png",
 					"images/xinhuan.png",
-					"pages/main/logisticslist.html"
+					"pages/main/logisticslist.html",
+					"css/icons-extra.css",
+					"fonts/mui.ttf",
+					"js/language/locale_zh_CN.js",
+					"css/kankan_home.css",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/jquery-3.2.0.min.js",
+					"js/sha256.js",
+					"css/mui.min.css",
+					"js/language.js",
+					"images/morebut.png",
+					"images/nopic.jpg"
+				],
+				"refer": [
+					"pages/transaction/transevaluate.html",
+					"pages/transaction/change_item.html"
+				],
+				"priority": 0
+			},
+			"pages/transaction/transevaluate.html": {
+				"resources": [
+					"images/Bad.PNG",
+					"images/Normal.PNG",
+					"images/Good.PNG",
+					"css/wu.css",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"js/language/locale_zh_CN.js",
+					"fonts/mui.ttf"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/products/commentlist.html": {
+				"resources": [
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"js/language/locale_zh_CN.js",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"fonts/mui-icons-extra.ttf"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/transaction/select_item.html": {
+				"resources": [
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"js/language/locale_zh_CN.js",
+					"fonts/mui.ttf",
+					"css/icons-extra.css"
+				],
+				"refer": [
+					"pages/transaction/transaction2.html"
+				],
+				"priority": 0
+			},
+			"pages/transaction/change_item.html": {
+				"resources": [
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"js/language/locale_zh_CN.js",
+					"css/icons-extra.css",
+					"images/nopic.jpg",
+					"fonts/mui.ttf",
+					"css/kankan_home.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/setting/setting.html": {
+				"resources": [
+					"pages/main/user/user.html",
+					"css/wu.css",
+					"css/feedback.css",
+					"js/feedback.js",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"js/language/locale_zh_CN.js",
+					"js/mui.view.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/news.html": {
+				"resources": [
+					"js/common.js",
+					"js/mui.min.js",
+					"js/sha256.js",
+					"js/jquery-3.2.0.min.js",
+					"js/language.js",
+					"css/mui.min.css",
+					"js/language/locale_zh_CN.js"
 				],
 				"refer": [],
 				"priority": 0
