--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -7,8 +7,8 @@
 	"id": "H5B7054BD",
 	"name": "kankan",
 	"version": {
-		"name": "1.0.0",
-		"code": "83"
+		"name": "0.0.2",
+		"code": "2"
 	},
 	"description": "",
 	"icons": {
@@ -102,20 +102,20 @@
 				"payment": {
 					"weixin": {
 						"description": "微信支付",
-						"appid": "wx1915653b1958f7d6"
+						"appid": "wxa305a32371b65619"
 					}
 				},
 				"share": {
 					"weixin": {
-						"appid": "wx1915653b1958f7d6",
-						"appsecret": "965c63ce5c9150a26234c5f73cdc788c",
+						"appid": "wxa305a32371b65619",
+						"appsecret": "0010a787ec3751c355681d1b9aaede73",
 						"description": "可选，微信分享"
 					}
 				},
 				"oauth": {
 					"weixin": {
-						"appid": "wx1915653b1958f7d6",
-						"appsecret": "965c63ce5c9150a26234c5f73cdc788c"
+						"appid": "wxa305a32371b65619",
+						"appsecret": "0010a787ec3751c355681d1b9aaede73"
 					}
 				}
 			},
